0030923: Visualization, AIS_ViewCube - avoid mixing non-zoomable text and trihedron-persistence

Box sides labels are now drawn with zoomable flag.